<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_group"
        android:icon="@drawable/add_group"
        android:title="@string/add_group"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_completed"
        android:icon="@drawable/delete_cancelled"
        android:title="@string/delete_cancelled"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings_list"
        android:title="@string/settings_list" />
    <item
        android:id="@+id/change_list"
        android:title="@string/change_list" />
    <item
        android:id="@+id/clear_list"
        android:title="@string/clear_list" />
</menu>